--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,10 +3,10 @@
     --secondary-color: #3498db;
     --accent-color: #e74c3c;
     --text-color: #333;
-    --bg-color: #ffffff;
-    --section-bg: #f8f9fa;
+    --bg-color: #fcfcfc;
+    --section-bg: #fcfcfc;
     --border-color: #e0e0e0;
     --header-height: 100px;
     --header-bg: #f5f7fa;
-    --card-bg: #ffffff;
+    --card-bg: #f9f9f9;
 }
